=========
Changelog
=========

Here you can find the recent changes to libtmux

- :release:`0.7.3 <2017-05-29>`
- :support:`-` Exact matches only supported on 2.1 and up

- :release:`0.7.2 <2017-05-29>`
- :support:`-` Support exact matching in ``Server.has_session``

- :release:`0.7.1 <2017-04-28>`
- :support:`37` Improve support for formatted options like
  ``pane-border-status``. Thanks @kaushalmodi.

- :release:`0.7.0 <2017-04-27>`
- :support:`-` Support for python 2.6 dropped. New minimum version is 2.7
- :feature:`-` Add support for tmux 2.4, pypy and pypy3
- :feature:`-` Overhaul error handling when setting and showing options
  
  - Added `handle_option_error` for handling option errors
  - Added :exc:`libtmux.exc.OptionError` base exception
  - Added :exc:`libtmux.exc.InvalidOption` and `libtmux.exc.AmbiguousOption`
  - :exc:`libtmux.exc.UnknownOption` now extends :exc:`libtmux.exc.OptionError`

- :feature:`-` Overhaul version checking

  - ``has_version`` has been renamed to ``get_version``
  - ``get_version`` will return tmux built from git master as the latest version supported by the libtmux version with ``-master`` at the end, e.g. ``2.4-master``
  - ``get_version`` will return tmux on openbsd base system as the latest version supported by the libtmux version with ``-openbsd`` at the end, e.g. ``2.4-openbsd``
  - ``has_required_tmux_version`` has been renamed to ``has_minimum_version``
  - added ``has_gt_version``, ``has_gte_version``, ``has_lt_version``, ``has_lte_version``,

- :support:`-` Fixed up documentation in some session methods
- :support:`-` Added pydoc exception info to option methods in window and sessions.
- :support:`-` Added ``TMUX_MIN_VERSION`` and ``TMUX_MAX_VERSION``

- :release:`0.6.5 <2017-04-02>`
- :support:`-` Fix ``which`` command
- :support:`-` Add ``TmuxCommandNotFound`` exception
- :support:`-` Add ``tmux_search_paths`` and ``append_env_path`` kwargs to
  ``tmux_cmd``.

- :release:`0.6.4 <2017-03-25>`