@@ -1,4 +1,4 @@
-docutils==0.13.1
+docutils==0.14
 releases==1.3.1 # updated from 1.2.0
-sphinx==1.6.2
-alagitpull==0.0.5
+sphinx==1.6.4
+alagitpull==0.0.13
