@@ -1,1 +1,1 @@
-pytest==3.1.0 # Updated from 3.0.4
+pytest==3.2.3 # Updated from 3.0.4
