@@ -5,5 +5,4 @@ select = E,W,F,N
 [egg_info]
 tag_build = 
 tag_date = 0
-tag_svn_revision = 0
 
